Make upload stage first

--- a/src/index.html
+++ b/src/index.html
@@ -166,7 +166,7 @@
         </div>
       </div>
     </div>
-    <div class="stage" id="video-stage">
+    <div class="stage" id="video-stage" hidden>
       <button id="back-to-upload-button" class="back-button">Back</button>
       <video id="video" playinline></video>
       <div class="video-time-fieldset">
